# terminal-gpt

./: .build.yml  .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  config_default.yaml  models.yaml  pyproject.toml  requirements.txt
src/: terminal_gpt.py
src/term_assist/: main.py
src/term_assist/test/: base.py  run.sh  test.py
src/term_assist/test/data/: help.txt
src/terminal_gpt/: terminal_gpt.py
